find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Gui Widgets)

SET(CMQT_INCLUDE_PATH   ${CMQT_ROOT_INCLUDE_PATH}/hgl/qt)

SET(CMQT_WIDGET_INCLUDE_PATH   ${CMQT_INCLUDE_PATH}/widget)
SET(CMQT_DIALOG_INCLUDE_PATH   ${CMQT_INCLUDE_PATH}/dialog)

IF(WIN32)
    set(CMQT_MAIN_SOURCE  ${CMAKE_CURRENT_SOURCE_DIR}/QT5WinUCS2.cpp)
ELSEIF()
    set(CMQT_MAIN_SOURCE  ${CMAKE_CURRENT_SOURCE_DIR}/QT5UnixUTF8.cpp)
endif()

SET(CMQT_DIALOG_FILES ${CMQT_DIALOG_INCLUDE_PATH}/NameEdit.h
                      dialog/NameEdit.cpp)

SOURCE_GROUP("Dialog" FILES ${CMQT_DIALOG_FILES})

add_cm_library(CMQT "CM" ${CMQT_DIALOG_FILES})

target_link_libraries(CMQT PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets)

