find_package(Qt${CM_QT_MAJOR_VERSION} ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Gui Widgets Svg Xml)

SET(CMQT_INCLUDE_PATH   ${CMQT_ROOT_INCLUDE_PATH}/hgl/qt)

SET(CMQT_WIDGET_INCLUDE_PATH   ${CMQT_INCLUDE_PATH}/widgets)
SET(CMQT_DIALOG_INCLUDE_PATH   ${CMQT_INCLUDE_PATH}/dialog)

IF(WIN32)
    set(CMQT_MAIN_SOURCE  ${CMAKE_CURRENT_SOURCE_DIR}/QT5WinUCS2.cpp)
ELSEIF()
    set(CMQT_MAIN_SOURCE  ${CMAKE_CURRENT_SOURCE_DIR}/QT5UnixUTF8.cpp)
endif()

SET(CMQT_DIALOG_FILES ${CMQT_DIALOG_INCLUDE_PATH}/NameEdit.h
                      dialog/NameEdit.cpp)

SOURCE_GROUP("Dialog" FILES ${CMQT_DIALOG_FILES})

SET(CMQT_IMAGE_FILES image/SVGPixmap.cpp)

SOURCE_GROUP("Image" FILES ${CMQT_IMAGE_FILES})

SET(CMQT_MENU_FILES ${CMQT_WIDGET_INCLUDE_PATH}/TipMenu.h
                     widgets/TipMenu.cpp)

SOURCE_GROUP("Menu" FILES ${CMQT_MENU_FILES})

SET(CMQT_Vulkan_FILES   ${CMQT_INCLUDE_PATH}/QtVulkanWindow.h
                        vulkan/QtVulkanWindow.cpp
                        vulkan/QtVulkanSurface.cpp)

SOURCE_GROUP("Vulkan" FILES ${CMQT_Vulkan_FILES})

SET(CMQT_STYLE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/style)

include(style/style.cmake)

add_cm_library(CMQT "CM" ${CMQT_DIALOG_FILES} ${CMQT_IMAGE_FILES} ${CMQT_MENU_FILES} ${CMQT_STYLE_FILES})

target_link_libraries(CMQT PUBLIC Qt${CM_QT_MAJOR_VERSION}::Core Qt${CM_QT_MAJOR_VERSION}::Gui Qt${CM_QT_MAJOR_VERSION}::Widgets Qt${CM_QT_MAJOR_VERSION}::Svg Qt${CM_QT_MAJOR_VERSION}::Xml)
